--- a/templates/index.html
+++ b/templates/index.html
@@ -1,29 +1,16 @@
 {% extends "base.html" %}
-
+   
 {% block user %}
 
-{% if user == "Login" %}
-<a href="{{url_for("login")}}">Login</a>
-
+{% if user=="Login" %}
+<a href="{{url_for('login')}}">Login</a>
 {% else %}
 <p>user: {{user}}</p>
-<a href="{{url_for("logout")}}">Logout</a>
+<a href="{{url_for('logout')}}">Logout</a>
+<a href="{{url_for('upload')}}">글 작성하기</a>
+<a href="{{url_for('post_list')}}">글 목록 보기</a>
 {% endif %}
 {% endblock user %}
 
 {% block contents %}
-    <div class="container">
-        {% if filename %}
-            <div>
-            <img src="{{filename}}">
-            </div>
-            <div>
-                <p>{{label}} {{probability}}</p>
-            </div>
-        {% endif %}
-        <form method="post" action="/upload" enctype="multipart/form-data">
-            <input type="file" name="file">
-            <input type="submit" value="submit">
-        </form>
-        </div>
 {% endblock contents %}
