--- a/templates/index.html
+++ b/templates/index.html
@@ -8,7 +8,7 @@
 <p>user: {{user}}</p>
 <a href="{{url_for('logout')}}">Logout</a>
 <a href="{{url_for('upload')}}">글 작성하기</a>
-<a href="{{url_for('post_list')}}">글 목록 보기</a>
+<a href="{{url_for('upload_list')}}">글 목록 보기</a>
 {% endif %}
 {% endblock user %}
 
