--- a/templates/base.html
+++ b/templates/base.html
@@ -10,7 +10,7 @@
 
 		{% endblock message %}
 		<header>
-			<a href="{{url_for('index')}}"><p>FLASH WORLD</p></a>
+			<a href="{{url_for('index')}}"><p>HOME</p></a>
 			{% block user %}
 
 			{% endblock user %}
