--- a/templates/upload_list.html
+++ b/templates/upload_list.html
@@ -8,10 +8,10 @@
     <p>작성된 포스트가 없습니다.</p>
 
 {% else %}
-    {% for list in upload_list %}
-    <a href="{{url_for('user_upload', pid=list[0])}}">
+    {% for post in upload_list %}
+    <a href="{{url_for('post', pid=post[0])}}">
         <div>
-            {{list[0]}}
+            {{post[0]}}
         </div>
     </a>
 
