--- a/templates/upload.html
+++ b/templates/upload.html
@@ -20,7 +20,7 @@
             <img src="{{filename}}">
             </div>
             <div>
-                <p>{{label}} {{probability}}</p>
+                <p>{{label}} {{probability}} {{labels}}</p>
             </div>
         {% endif %}
     </div>
