--- a/templates/new_index.html
+++ b/templates/new_index.html
@@ -1,6 +1,5 @@
-<!--로그인, 회원가입, 글작성, 글목록 버튼만 추가-->
-{% extends "base.html" %}
-   
+{% extends "new_base.html" %}
+
 {% block user %}
 
 {% if user=="Login" %}
