--- a/templates/new_signin.html
+++ b/templates/new_signin.html
@@ -1,5 +1,4 @@
-<!--회원가입 화면-->
-{% extends "base.html" %}
+{% extends "new_base.html" %}
 
 {% block message %}
 {% with messages = get_flashed_messages(with_categories=true) %}
