--- a/templates/new_base.html
+++ b/templates/new_base.html
@@ -8,7 +8,7 @@
     <title>3R Engine Tester</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto%3A400"/>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source+Sans+Pro%3A400"/>
-    <link rel="stylesheet" href="styles/frame1.css"/>
+    <link rel="stylesheet" href="./styles/frame1.css"/>
 </head>
 <body>
 {% block message %}
