--- a/templates/upload.html
+++ b/templates/upload.html
@@ -26,7 +26,7 @@
             </div>
             <div>
                 {% if label, probability %}
-                <p>{{label}} {{probability}}</p>
+                <p>{{label}} {{probability}}%</p>
                 {% endif %}
             </div>
         {% endif %}
