--- a/templates/upload_detail.html
+++ b/templates/upload_detail.html
@@ -8,6 +8,6 @@
 <div>
     <img src="{{'../'+filename}}">
 </div>
-<p>path: {{post.label}}</p>
-<p>label : {{post.probability}}</p>
+<p>label: {{post.label}}</p>
+<p>probability : {{post.probability}}%</p>
 {% endblock contents %}
