--- a/templates/landingpage.html
+++ b/templates/landingpage.html
@@ -10,7 +10,7 @@
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source+Sans+Pro%3A400%2C500%2C600"/>
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Poppins%3A400%2C500%2C600"/>
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Jost%3A400"/>
-  <link rel="stylesheet" href="./styles/ladingpage.css"/>
+  <link rel="stylesheet" href="{{ url_for('static', filename='css/landingpage.css') }}"/>
 </head>
 <body>
 <div class="ladingpage-sJQ">
