--- a/templates/login.html
+++ b/templates/login.html
@@ -5,7 +5,7 @@
   <title>Log In / Sign Up</title>
   <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.0/css/bootstrap.min.css'>
 <link rel='stylesheet' href='https://unicons.iconscout.com/release/v2.1.9/css/unicons.css'>
-<link rel="stylesheet" href="{{ url_for('static', filename='css/login_style.css') }}">
+<link rel="stylesheet" href="{{url_for('static', filename='css/login_style.css') }}">
 </head>
 <body>
 <!-- partial:index.partial.html -->
@@ -25,8 +25,7 @@
 										<div class="section text-center">
 											<h4 class="mb-4 pb-3">Log In</h4>
 											<div class="form-group">
-												
-												<input type="text" name="uid" class="form-style" placeholder="Your Email" id="uid" autocomplete="off">
+												<input type="text" name="uid" class="form-style" placeholder="Your ID" id="uid" autocomplete="off">
 												<i class="input-icon uil uil-at"></i>
 											</div>	
 											<div class="form-group mt-2">
@@ -34,7 +33,6 @@
 												<i class="input-icon uil uil-lock-alt"></i>
 											</div>
 											<button type="submit" class="btn mt-4">Submit</button>
-										
                             				<p class="mb-0 mt-4 text-center"><a href="#0" class="link">Forgot your password?</a></p>
 				      					</div>
 			      					</div>
@@ -45,11 +43,11 @@
 									<div class="center-wrap">
 										<div class="section text-center">
 											<h4 class="mb-4 pb-3">Sign Up</h4>
-											<div class="form-group mt-2">
+											<div class="form-group">
 												<input type="email" name="email" class="form-style" placeholder="Your Email" id="email" autocomplete="off">
 												<i class="input-icon uil uil-at"></i>
 											</div>	
-											<div class="form-group">
+											<div class="form-group mt-2">
 												<input type="text" name="id" class="form-style" placeholder="Your ID" id="id" autocomplete="off">
 												<i class="input-icon uil uil-user"></i>
 											</div>	
