--- a/templates/upload.html
+++ b/templates/upload.html
@@ -25,7 +25,7 @@
             <img src="{{filename}}">
             </div>
             <div>
-                {% if label, probability %}
+                {% if label %}
                 <p>{{label}} {{probability}}%</p>
                 {% endif %}
             </div>
