--- a/templates/landingpage.html
+++ b/templates/landingpage.html
@@ -42,7 +42,7 @@
           </div>
         </div>
       </div>
-      <script src="./index.js"></script>
+      <script src="../static/js/index.js"></script>
       <!--frame group-->
       <div class="auto-group-deyn-g8g">
         <div class="frstlndng-zfA">
@@ -120,7 +120,7 @@
                 </li>
               </ul>
             </div>
-            <script src="./app.js"></script>
+            <script src="../static/js/app.js"></script>
           </div>
         </div>
         <div class="frame-4-uQ4" data-aos="fade-right" data-aos-once="false" data-aos-duration="1200" data-aos-easing = "Ease in-out Cubic">
