--- a/templates/demo.html
+++ b/templates/demo.html
@@ -12,7 +12,7 @@
 </head>
 <body>
 <div class="demo-page-Mig">
-  <input type="checkbox" id="menuicon">
+  <input type="checkbox" id="menuicon" name="menuicon">
   <label for="menuicon">
     <span></span>
     <span></span>
@@ -21,70 +21,73 @@
   <div class="sidebar">
     <div class="profile-URv">
       <div class="ellipse-1-Nfi"></div>
-      <div class="name-goes-here-s6g">name goes here</div>
+      <div class="name-goes-here-s6g">{{user}}</div>
+    </form>
     </div>
     <div class="hist_list">
       <div class="text">History Gallery</div>
       <div class="container">
-        <div class="images">
-          <div class="imageFlex1">
-            <img src="./photos/image1.jpg">
-            <img src="./photos/image4.jpg">
-            <img src="./photos/image7.jpg">
-            <img src="./photos/image10.jpg">
-            <img src="./photos/image13.jpg">
-            <img src="./photos/image16.jpg">
-          </div>
-        </div>
-        <div class="images">
-          <div class="imageFlex2">
-            <img src="./photos/image2.jpg">
-            <img src="./photos/image5.jpg">
-            <img src="./photos/image8.jpg">
-            <img src="./photos/image11.jpg">
-            <img src="./photos/image14.jpg">
-          </div>
-        </div>
-        <div class="images">
-          <div class="imageFlex3">
-            <img src="./photos/image3.jpg">
-            <img src="./photos/image6.jpg">
-            <img src="./photos/image9.jpg">
-            <img src="./photos/image12.jpg">
-            <img src="./photos/image15.jpg">
-          </div>
-        </div>
+        {% if length == 0 %}
+          <p>작성된 포스트가 없습니다.</p>
+        {% else %}
+          {% for post in upload_list %}
+          <a href="{{url_for('post', fid=post[0])}}">
+            <div>
+              <p>file name: {{post[1].path_on_cloud}}</p>
+            </div>
+          </a>
+          {% endfor %}
+          {% endif %}
       </div>
     </div>
   </div>
-
   <div class="linebox-NSk">
     <div class="title-7QL">Try out 3R Demo</div>
+    <form action="{{url_for('upload_done')}}" method="post" enctype="multipart/form-data">
     <div class="mainbox-DiG">
       <div class="auto-group-vd1z-M3n">
         <div class="auto-group-r9w8-E7a">
           <div class="group-1-8Tr">
             <div class="rectangle-1-cnL">
             </div>
-            <div class="select-photo-vY8">Select Photo..</div>
+            <div class="select-photo-vY8"><input type="file" name="file"></div>
           </div>
-          <div class="runbtn-BU4">Run</div>
+            <input type="submit" value="submit" class="runbtn-BU4">
         </div>
         <div class="ErrorMain">
           <div class="ErrorBox">
             <div class="Box">
             </div>
-            <div class="ErrorTxt">Error message</div>
+            <div class="ErrorTxt">
+              {% with messages = get_flashed_messages() %}
+              {% if messages %}
+	              <p>{{messages[0]}}</p>
+              {% endif %}
+              {% if labels %}
+              <p>{{labels}}</p>
+              {% endif %}
+              {% endwith %}
+            </div>
           </div>
         </div>
       </div>
       <div class="group-5-fGk">
         <div class="pix-PTe">
+          {% if filename %}
+          <img src="{{filename}}">
+          {% endif %}
         </div>
         <div class="group-3-4Xr">
-          <div class="auto-group-e1hs-Yxp">result</div>
+          <div class="auto-group-e1hs-Yxp">
+            {% if filename %}
+            {% if label %}
+                <p>{{label}} {{probability}}%</p>
+            {% endif %}
+            {% endif %}
+          </div>
         </div>
       </div>
+    </form>
     </div>
   </div>
 </div>
